syntax = "proto2";

package aecor.runtime.akkapersistence.serialization;
option java_package = "aecor.runtime.akkapersistence.serialization.msg";
option optimize_for = SPEED;

message HandleCommand {
    required bytes command = 1;
    required int32 serializerId = 2;
    required bytes messageManifest = 3;
}